<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OurStoreApp</string>
    <string name="generic_price">$ %.2f</string>

    -- Login, Register Activity --
    <string name="register_account">Do not have Account? <u><i>Register Now</i></u></string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="login">Log In</string>
    <string name="login_account">Already have an account? <u><i>Login now</i></u></string>
    <string name="title_activity_home">MainActivity</string>
    <string name="get_your_grocer">Get your groceries with nectar</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_credentials_to_continue">Enter your credentials to continue</string>
    <string name="username">Username</string>
    <string name="email">Email</string>

    -- Home Activity --
    <string name="title_shop">Shop</string>
    <string name="title_explore">Explore</string>
    <string name="title_cart">Cart</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_account">Account</string>

    -- Fragment Account --
    <string name="orders">Orders</string>
    <string name="my_details">My Details</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="promo_cord">Promo Cord</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="logout">Log Out</string>
    <string name="nguyen_xuan_truong">Nguyễn Xuân Trường</string>
    <string name="email_truong">n.truong0702@gmail.com</string>
    <string name="payment">Payment</string>
    <string name="your_card_number">Your Card Number</string>
    <string name="credit_card">Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="cash_pay">Cash Pay</string>
    <string name="authorize_uber_for_rs_2000">Authorize UBer For <b>RS.2000</b></string>
    <string name="we_accept">We Accept</string>
    <string name="card_password">Card Password</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="authorize">Authorize</string>
    <string name="update_account">Update Account</string>
    <string name="your_full_name">Your full name</string>
    <string name="your_email">Your Email</string>
    <string name="change_info">Change Info</string>
    <string name="master_card">Master Card</string>
    <string name="discover">Discover</string>
    <string name="maestro">Maestro</string>
    <string name="visa">Visa</string>
    <string name="address_hanoi_vietnam">Address: Hà Nội - Việt Nam</string>
    <string name="sex_male">Sex: Male</string>
    <string name="age_22">Age: 22</string>
    <string name="profile">PROFILE</string>
    <string name="jack_hughman">Jack Hughman</string>
    <string name="developer">Android Developer</string>
    <string name="_1_603_200">1.603.200</string>
    <string name="_99">99</string>
    <string name="_3060">3060</string>
    <string name="gender_male">Gender: Male</string>
    <string name="phone_0396036610">Phone: 0396036610</string>
    <string name="address_ha_noi_viet_nam">Address: Ha Noi - Viet Nam</string>
    <string name="_0237_6666">0237 **** **** 6666</string>

    -- Fragment Shop --
    <string name="exclusive">Exclusive</string>
    <string name="see_all">See All</string>
    <string name="best_selling">Best Selling</string>
    <string name="favourite">Favourite</string>
    <string name="add_all_to_cart">Add All To Cart</string>
    <string name="add_to_basket">Add To Basket</string>
</resources>