<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/_16sdp"
    android:paddingRight="@dimen/_16sdp"
    android:background="@drawable/layout_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="center"
        android:text="@string/update_account"
        android:textColor="@color/green_default"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:hintEnabled="true">

        <EditText
            android:id="@+id/edtYourFullNameUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_full_name"
            android:importantForAutofill="no"
            android:singleLine="true"
            tools:ignore="TextFields" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:hintEnabled="true">

        <EditText
            android:id="@+id/edtYourEmailUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_email"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            tools:ignore="TextFields" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvChangeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/background_button_default"
        android:paddingStart="@dimen/_16sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/change_info"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>