<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_bottom_sheet"
    android:focusable="false"
    android:focusableInTouchMode="true"
    android:paddingStart="@dimen/_8sdp"
    android:paddingEnd="@dimen/_8sdp"
    android:paddingBottom="@dimen/_16sdp">

    <ImageView
        android:layout_marginTop="@dimen/_4sdp"
        android:id="@+id/imgClose"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/layoutPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/background_layout_choose_pay"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgClose">

        <LinearLayout
            android:id="@+id/layoutCreditCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_choose_payment"
            android:orientation="vertical"
            android:padding="@dimen/_22sdp"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_credit_card"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/credit_card" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutDebitCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_22sdp"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_credit_card"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/debit_card" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCashPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_22sdp"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_cash_pay"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/cash_pay" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvAuthorizeUber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/authorize_uber_for_rs_2000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutPay" />

    <LinearLayout
        android:id="@+id/layoutAccept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_layout_choose_pay"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAuthorizeUber">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:text="@string/we_accept"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/_80sdp"
            android:paddingRight="@dimen/_80sdp"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:id="@+id/imgVisa"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1"
                android:src="@drawable/visa"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imgMaestro"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1"
                android:src="@drawable/maestro_logo"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imgDiscover"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1"
                android:src="@drawable/discover"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imgMasterCard"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1"
                android:src="@drawable/master_card"
                tools:ignore="ContentDescription" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="#D5D5D5" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_card_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtCardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="15"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal"
            android:weightSum="2"
            tools:ignore="DisableBaselineAlignment">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edtExpiryDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/expiry_date"
                    android:importantForAutofill="no"
                    android:maxLength="10"
                    android:inputType="date"
                    android:singleLine="true"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edtCardPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/card_password"
                    android:importantForAutofill="no"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:singleLine="true"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvAuthorize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/background_button_default"
        android:gravity="center"
        android:paddingStart="@dimen/_16sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/authorize"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutAccept" />

</androidx.constraintlayout.widget.ConstraintLayout>